--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -2,6 +2,18 @@ Host *
     ForwardX11 yes
     ForwardX11Trusted yes
     ServerAliveInterval 60
-Host ganghe.dev
-    Hostname ganghe.dev
+Host 2
+    Hostname 192.168.0.2
+    User root
+Host 5
+    Hostname 192.168.0.5
     User me
+Host 6
+    Hostname 192.168.0.6
+    User admin
+Host 7
+    Hostname 192.168.0.7
+    User dddd
+Host 8
+    Hostname 192.168.0.8
+    User pi
