--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,8 +10,12 @@
 	quotepath = off
 	editor = nvim
 [commit]
-	gpgsign = true
+	gpgsign = false
 [gpg]
 	program = gpg
 [alias]
-    l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
+	s = status
+	co = checkout
+	ci = commit
+	br = branch
+    l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit -10
