git: alias b=branch

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -18,5 +18,6 @@
     s = status
     co = checkout
     ci = commit
+    b = branch
     br = branch
     l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit -10
