--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -5,6 +5,9 @@ Host *
 Host 2
     Hostname 192.168.0.2
     User root
+Host 4
+    Hostname 192.168.0.4
+    User me
 Host 5
     Hostname 192.168.0.5
     User me
