git: [alias] l += --no-pager

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -20,4 +20,4 @@
     ci = commit
     b = branch
     br = branch
-    l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit -10
+    l = !git --no-pager log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit -10
