ssh: config += aistages
and fix mini

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -22,4 +22,8 @@ Host 8
     User pi
 Host mini
     Hostname 192.168.0.35
-    User mini
+    User me
+Host aistages
+    HostName 101.101.211.225
+    User root
+    Port 2228
