--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -15,7 +15,7 @@
 [core]
 	quotepath = off
 	editor = nvim
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	pager = delta
 
 [commit]
 	gpgsign = false
@@ -33,7 +33,7 @@
 	l = !git --no-pager log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit -10
 
 [interactive]
-	diffFilter = diff-so-fancy --patch
+	diffFilter = delta --color-only --features=interactive
 
 [color "decorate"]
 	# With git 1.8+, %C(auto)%d will assign different color to each refspec.
@@ -62,3 +62,29 @@
 	old = red bold
 	new = green bold
 	whitespace = red reverse
+
+[delta]
+	features = decorations
+	keep-plus-minus-markers = true
+	hunk-header-style = file line-number syntax
+	line-numbers = true
+	side-by-side = true
+	syntax-theme = Dracula
+
+[delta "decorations"]
+	commit-decoration-style = bold yellow box ul
+	file-style = bold yellow ul
+    file-decoration-style = none
+	hunk-header-decoration-style = cyan box ul
+
+[delta "line-numbers"]
+    line-numbers-left-style = cyan
+    line-numbers-right-style = cyan
+    line-numbers-minus-style = 124
+    line-numbers-plus-style = 28
+
+[merge]
+	conflictstyle = diff3
+
+[diff]
+	colorMoved = default
