tmux: bind-key F2

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,7 @@ set-option -g mouse on
 # ====================
 bind-key r source-file ~/.tmux.conf \; display "Reloaded from ~/.tmux.conf"
 
+bind-key -n F2 new-window -c "#{pane_current_path}" \; rename-window "-"
 bind-key -n C-F2 split-window -h -c "${pane_current_path}"
 bind-key -n S-F2 split-window -v -c "${pane_current_path}"
 bind-key -n C-S-F2 new-session \; rename-window "-"
