tmux: `bind-key -T copy-mode-vi ...`
do not move to the bottom after selection.
just copy.

and minor theme change

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,6 +38,7 @@ bind-key -n M-S-Down resize-pane -D
 bind-key -n M-S-Left resize-pane -L
 bind-key -n M-S-Right resize-pane -R
 
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection
 
 # ====================
 # theme
@@ -56,8 +57,8 @@ set -g status "on"
 set-option -g status-interval 1
 set-option -g status-bg colour248
 set-option -g status-fg default
-set -g status-right "#(tmux-mem-cpu-load -a0)  %H:%M:%S #[fg=white]#{@main_separator} #[fg=black]%d-%b-%y "
-set -g status-left "#[bg=colour230] [#h] #[bg=colour248] #S "
+set -g status-right "#[fg=black]#(tmux-mem-cpu-load -a0)  %H:%M:%S #[fg=white]#{@main_separator} #[fg=black]%d-%b-%y "
+set -g status-left "#[fg=black]#[bg=colour230] [#h] #[bg=colour248] #S "
 set -g status-right-length "100"
 set -g status-left-length "100"
 
