--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,29 +1,35 @@
+# Default
 Host *
     ForwardX11 yes
     ForwardX11Trusted yes
     ServerAliveInterval 60
-Host 2
-    Hostname 192.168.0.2
+
+# Locals
+Host 2 4 5 35 36 37 38 42
+    Hostname 192.168.0.%h
+Host 4 5 35 36
+    User me
+Host 2 37 38 42
     User root
-Host 4
-    Hostname 192.168.0.4
-    User me
-Host 5
-    Hostname 192.168.0.5
-    User me
-Host 6
-    Hostname 192.168.0.6
-    User admin
-Host 7
-    Hostname 192.168.0.7
-    User dddd
-Host 8
-    Hostname 192.168.0.8
-    User pi
-Host mini
+Host mini 35
     Hostname 192.168.0.35
     User me
-Host aistages
-    HostName 101.101.209.112
+Host ubuntu 36
+    Hostname ddac.cc
+    User me
+    Port 22236
+Host docker 37
+    Hostname 192.168.0.37
     User root
-    Port 2235
+Host game 38
+    Hostname 192.168.0.38
+    User root
+Host box 42
+    Hostname 192.168.0.42
+    User root
+
+# Remotes
+Host aistages
+    HostName 49.50.160.104
+    User root
+    Port 2239
