--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,7 +1,7 @@
 # Default
 Host *
-    ForwardX11 yes
-    ForwardX11Trusted yes
+    # ForwardX11 yes
+    # ForwardX11Trusted yes
     ServerAliveInterval 60
 
 # Locals
