--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,15 +15,15 @@ set-option -g mouse on
 # ====================
 bind-key r source-file ~/.tmux.conf \; display "Reloaded from ~/.tmux.conf"
 
-bind-key -n F2 new-window -c "#{pane_current_path}" \; rename-window "-"
-bind-key -n C-F2 split-window -h -c "${pane_current_path}"
-bind-key -n S-F2 split-window -v -c "${pane_current_path}"
-bind-key -n C-S-F2 new-session \; rename-window "-"
-bind-key -n F3 previous-window
-bind-key -n F4 next-window
-bind-key -n F6 detach
-bind-key -n F8 command-prompt -p "(rename-window) " "rename-window '%%'"
-bind-key -n C-F8 command-prompt -p "(rename-session) " "rename-session '%%'"
+bind-key F2 new-window -c "#{pane_current_path}" \; rename-window "-"
+bind-key C-F2 split-window -h -c "${pane_current_path}"
+bind-key S-F2 split-window -v -c "${pane_current_path}"
+bind-key C-S-F2 new-session \; rename-window "-"
+bind-key F3 previous-window
+bind-key F4 next-window
+bind-key F6 detach
+bind-key F8 command-prompt -p "(rename-window) " "rename-window '%%'"
+bind-key C-F8 command-prompt -p "(rename-session) " "rename-session '%%'"
 
 bind-key -n M-Left previous-window
 bind-key -n M-Right next-window
