--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,7 +1,7 @@
 # Default
 Host *
-    # ForwardX11 yes
-    # ForwardX11Trusted yes
+    ForwardX11 yes
+    ForwardX11Trusted yes
     ServerAliveInterval 60
 
 # Locals
@@ -29,7 +29,3 @@ Host box 42
     User root
 
 # Remotes
-Host aistages
-    HostName 49.50.160.104
-    User root
-    Port 2239
