ssh: update domain

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -15,7 +15,7 @@ Host mini 35
     Hostname 192.168.0.35
     User me
 Host ubuntu 36
-    Hostname ddac.cc
+    Hostname dddd.ac
     User me
     Port 22236
 Host docker 37
